# DATA-SCIENCE-PROJECT1

./: .gitignore  AI_USAGE.md  README.md  pyproject.toml  pytest.ini  video_link.md
dashboards/: app.py  requirements.txt
data/: quality_report.json
data/processed/: chicago.csv  houston.csv  new_york.csv  phoenix.csv  seattle.csv
data/raw/: chicago_energy.csv  chicago_weather.csv  houston_energy.csv  houston_weather.csv  new_york_energy.csv  new_york_weather.csv  phoenix_energy.csv  phoenix_weather.csv  seattle_energy.csv  seattle_weather.csv
notebooks/: exploration.ipynb
src/: analysis.py  data_fetcher.py  data_processor.py  data_quality_report.py  pipeline.py
tests/: conftest.py  test_data_fetcher.py  test_data_processor.py  test_pipeline.py
